--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -14,3 +14,7 @@ jobs:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          COMMIT_MESSAGE: Updated the Readme
+          TIME_RANGE: last_7_days
+          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
+          SHOW_TOTAL: true
